correct spanish section title

--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
 
 				<section>
 					<section>
-						<h3 style="color: darkorange; font-size: 80%; text-align: left;">3. Límites y expectativas</h3>
+						<h3>3. Limits and expectations</h3>
 					</section>
 
 					<section>
