--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
 							</ul>
 						</section>
 						<section>
-							<h3>Futuro?</h3>
+							<h3>Future?</h3>
 							<div id="left50">
 								<ul>
 									<li>Video game design<br>(e.g. <a href="https://store.steampowered.com/app/423580/Project_Highrise/" target="_blank">Project Highrise</a>)
